Fixed line breaks in log viewer

--- a/app/assets/sass/app.scss
+++ b/app/assets/sass/app.scss
@@ -968,7 +968,7 @@ input.full-width {
 	height: 45rem;
 	color: #4a2a2a;
 	background: #efefef;
-	white-space: nowrap;
+	white-space: pre;
 }
 
 .todo-list {
